--- a/homework/09_RNN.ipynb
+++ b/homework/09_RNN.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5d04aeca",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f6076b96",
    "metadata": {},
    "outputs": [],
@@ -74,8 +74,14 @@
     "    \"\"\"Forward pass for the simple RNN\"\"\"\n",
     "    \n",
     "    # Do your calculations here\n",
-    "    # ....\n",
-    "    Y = np.zeros(10) # this is just here to create a working template function\n",
+    "    # .... \n",
+    "   \n",
+    "    n_steps = X.shape[0]\n",
+    "    h = np.copy(h_0)\n",
+    "    Y = np.zeros((n_steps, v.shape[0]))\n",
+    "    for t in range(n_steps):\n",
+    "            h = np.tanh(W.dot(h) + U.dot(X[t,:]) + b)\n",
+    "            Y[t,:] = V.dot(h) + v\n",
     "    \n",
     "    return Y"
    ]
@@ -90,10 +96,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ae873be9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_501/3223851733.py:12: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  n_h = int(prng.randint(2, 10, 1))  # the hidden state has a dimension between 2 and 10\n",
+      "/tmp/ipykernel_501/3223851733.py:13: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  n_x = int(prng.randint(50, 500, 1))  # one input vector has a dimension between 50 and 500\n"
+     ]
+    }
+   ],
    "source": [
     "def gen_random_weights_rnn():\n",
     "    \"\"\"\n",
@@ -139,10 +156,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b2bd6d7c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output time-step 1: [-2.91083062  0.82458322]\n",
+      "Output time-step 2: [ 0.39076207 -1.92015393]\n",
+      "Output time-step 3: [-2.27684388 -0.25243667]\n",
+      "Output time-step 4: [-1.7454112   1.95794606]\n",
+      "Output time-step 5: [ 2.04138548 -1.54670209]\n",
+      "Output time-step 6: [-4.22587434  1.97787894]\n",
+      "Output time-step 7: [ 0.11818177 -0.27242109]\n",
+      "Output time-step 8: [-6.91640738  1.28664074]\n",
+      "Output time-step 9: [ 2.49373692 -1.45286672]\n",
+      "Output time-step 10: [-2.93165395  1.21415933]\n",
+      "Output time-step 11: [-3.08335651  0.75229124]\n",
+      "Output time-step 12: [-1.55755772  0.31089277]\n",
+      "Output time-step 13: [ 1.91665606 -2.36142251]\n",
+      "Output time-step 14: [ 0.11277131 -2.34545177]\n",
+      "Output time-step 15: [-2.10131589  2.30990977]\n"
+     ]
+    }
+   ],
    "source": [
     "Y = sim_rnn(h_0, X, W, U, V, b, v)\n",
     "\n",
@@ -186,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d97cb9f2",
    "metadata": {},
    "outputs": [],
@@ -209,7 +248,25 @@
     "    \n",
     "    # Do your calculations here\n",
     "    # ....\n",
-    "    Y = np.zeros(10) # this is just here to create a working template function\n",
+    "    n_steps = X.shape[0]\n",
+    "    \n",
+    "    h = np.copy(h_0)\n",
+    "    k = np.copy(k_T)\n",
+    "\n",
+    "    Y = np.zeros((n_steps, v.shape[0]))  \n",
+    "    H = np.zeros((n_steps, h.shape[0]))\n",
+    "    K = np.zeros((n_steps, k.shape[0]))\n",
+    "    for t in range(n_steps):\n",
+    "            h = np.tanh(W_1.dot(h) + U_1.dot(X[t,:])+b_1)\n",
+    "            H[t,:] = h\n",
+    "\n",
+    "    for t in range(n_steps):\n",
+    "            k = np.tanh(W_2.dot(k) + U_2.dot(X[-1-t,:])+b_2)\n",
+    "            K[-1-t,:] = k\n",
+    "\n",
+    "    for t in range(n_steps):\n",
+    "           Y[t,:] = V_1.dot(H[t,:]) + V_2.dot(K[t,:]) + v           \n",
+    "   \n",
     "    \n",
     "    return Y"
    ]
@@ -224,10 +281,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a2578288",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_501/2739171899.py:12: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  n_h = int(prng.randint(2, 10, 1))  # the hidden state h has a dimension between 2 and 10\n",
+      "/tmp/ipykernel_501/2739171899.py:13: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  n_k = int(prng.randint(3, 7, 1))  # the hidden state k has a dimension between 3 and 7\n",
+      "/tmp/ipykernel_501/2739171899.py:14: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  n_x = int(prng.randint(50, 500, 1))  # one input vector has a dimension between 50 and 500\n"
+     ]
+    }
+   ],
    "source": [
     "def gen_random_weights_bidir_rnn():\n",
     "    \"\"\"\n",
@@ -282,10 +352,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "310ed029",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output time-step 1: [-0.43492241 -3.48599326]\n",
+      "Output time-step 2: [-1.40403368  8.29954021]\n",
+      "Output time-step 3: [0.66625303 0.64616938]\n",
+      "Output time-step 4: [ 0.21723953 -6.3092795 ]\n",
+      "Output time-step 5: [-2.75393301 -5.08034158]\n",
+      "Output time-step 6: [ 0.65424044 -3.35830087]\n",
+      "Output time-step 7: [ 0.29827632 -5.04194486]\n",
+      "Output time-step 8: [ 2.22499669 -0.66689858]\n",
+      "Output time-step 9: [ 2.55412834 -1.36850835]\n",
+      "Output time-step 10: [ 2.19833474 -7.33828425]\n",
+      "Output time-step 11: [ 2.01731224 -2.19435422]\n",
+      "Output time-step 12: [1.14792837 0.33398065]\n",
+      "Output time-step 13: [ 1.29436457 -0.50772499]\n",
+      "Output time-step 14: [ 2.02310537 -2.64353496]\n",
+      "Output time-step 15: [-2.61262749  3.67937708]\n"
+     ]
+    }
+   ],
    "source": [
     "Y = sim_bidir_rnn(h_0, k_T, X, W_1, U_1, b_1, V_1, W_2, U_2, b_2, V_2, v)\n",
     "\n",
