--- a/homework/10_Transformer.ipynb
+++ b/homework/10_Transformer.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,20 +95,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def scaled_dot_product_attention(Q: np.ndarray, K: np.ndarray, V: np.ndarray) -> np.ndarray:\n",
     "    # YOU CAN MAKE YOUR CHANGES HERE:\n",
-    "    #\n",
-    "    #\n",
-    "    #\n",
-    "    #\n",
-    "    #\n",
-    "    #\n",
-    "    #\n",
-    "    #\n",
+    "    \n",
+    "    dot_product = np.dot(Q, K.T)  \n",
+    "    d_k = Q.shape[1]  \n",
+    "    scaled_dot = dot_product / np.sqrt(d_k)   \n",
+    "    attention_weights = np.exp(scaled_dot - np.max(scaled_dot, axis=1, keepdims=True))\n",
+    "    attention_weights /= np.sum(attention_weights, axis=1, keepdims=True)\n",
+    "    y = np.dot(attention_weights, V)\n",
+    "\n",
     "    # STOP WITH CHANGES HERE.\n",
     "    return y"
    ]
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,9 +148,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.35980393]\n",
+      " [0.35497937]\n",
+      " [0.36540961]\n",
+      " [0.36460013]\n",
+      " [0.35675632]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Printing of the results\n",
     "# DO NOT CHANGE ANYTHING HERE.\n",
